manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
      - name: searxng
        image: searxng/searxng:latest
        ports:
          - containerPort: 8080

        volumeMounts:
          - name: config
            mountPath: /etc/searxng/settings.yml
            subPath: settings.yml
                    
          - name: limiter
            mountPath: /etc/searxng/limiter.toml
            subPath: limiter.toml

        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20

      volumes:
        - name: config
          configMap:
            name: searxng-config

        - name: limiter
          configMap:
            name: searxng-limiter
