manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  selector:
    app: searxng
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
